--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>GroveLabs | Welcome</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="main.js" defer></script>
+    <meta charset="UTF-8">
+    <title>Grove Portal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1 class="glitch">GroveLabs</h1>
-    <p class="subtitle">Enter the Network</p>
+    <h1>Welcome to Grove</h1>
+    <button id="adminBtn">Admin</button>
+    <button id="memberBtn">Member</button>
+    <button id="guestBtn">Guest</button>
 
-    <!-- Registration Form -->
-    <form id="registerForm" class="form">
-      <input type="text" placeholder="Username" required>
-      <input type="password" placeholder="Password" required>
-      <button type="submit">Register</button>
-    </form>
-
-    <!-- Hidden Admin Button -->
-    <button id="adminButton" class="admin-hidden">X</button>
-  </div>
+    <script src="main.js"></script>
 </body>
 </html>
